Move confetti wrapper behind newbies guide and fix spacing on attendance form

--- a/main/static/styles/views/attendance_profile/form.scss
+++ b/main/static/styles/views/attendance_profile/form.scss
@@ -11,6 +11,16 @@
         margin-bottom: $small-spacing;
         td {
             padding-left: $small-spacing;
+
+            #id_job_preferences {
+                list-style: none;
+                padding: 0;
+                margin: 0;
+
+                li {
+                    margin: 0;
+                }
+            }
         }
     }
 }
