--- a/main/static/styles/views/static/newbies.scss
+++ b/main/static/styles/views/static/newbies.scss
@@ -1,6 +1,7 @@
 @import '../../variables/index';
 
 .confetti-wrapper {
+    z-index: -1;
     position: relative;
     width: 85vh;
     min-height: 100vh;
